[project]
name = "runningbackfantasypointdistribution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.7",
    "nflreadpy>=0.1.5",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pyinstaller>=6.17.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
]
